Add first blog post

--- a/src/content/blog/00-hello-world/index.mdx
+++ b/src/content/blog/00-hello-world/index.mdx
@@ -1,13 +1,31 @@
 ---
 title: "Hello World!"
 description: "Welcome to my Blog!"
-date: "2025-03-02"
+date: "2025-03-03"
 ---
 
 import Callout from "@/components/Callout.astro";
 
 ---
 
-## Welcome to my Blog!
+## Hello World!
 
-Let's see how it goes. 🙂
+Welcome to my blog! 🚀
+
+## Who Am I?
+My name is Reinis Šestakovskis, and I'm a Senior Software Engineer / Full-stack Developer currently based in Frankfurt am Main, Germany. I have a background in full-stack development, AI, and machine learning, with experience working at startups, unicorns, and e-government software companies. My journey has taken me from building complex backend systems to integrating AI-powered features into SaaS platforms.
+
+## Why This Blog?
+As I've been working in the industry for some years now, I realized that I've gained knowledge and insights that could be valuable to others. So, both for my own sake and to give something back to the community, I've decided to start this blog, so that my experiences are available online in a more structured and digestible format. I find that writing is a great way to reflect on challenges, explore new ideas, and connect with like-minded people, so I'm excited to see where this journey takes me.
+
+## What to Expect?
+This blog will cover a mix of:
+- Software engineering insights (mainly for technologies such as Python, JavaScript/TypeScript, C# .NET)
+- Lessons learned from working in startups and larger companies
+- AI & machine learning experiments, applications, and discussions
+- Productivity hacks, tools, and best practices for engineers
+- Occasional deep dives into topics that pique my curiosity
+
+If you're interested in any of these topics, I’d love for you to stick around. Feel free to connect with me on [LinkedIn](https://www.linkedin.com/in/reinis-sestakovskis) or write to me at [reinissestakovskis@gmail.com](mailto:reinissestakovskis@gmail.com). I'm open to blog topic suggestions as well, so if you have any ideas, please let me know!
+
+Looking forward to sharing more soon. Stay tuned!
