--- a/src/content/blog/00-hello-world/index.mdx
+++ b/src/content/blog/00-hello-world/index.mdx
@@ -26,6 +26,6 @@ This blog will cover a mix of:
 - Productivity hacks, tools, and best practices for engineers
 - Occasional deep dives into topics that pique my curiosity
 
-If you're interested in any of these topics, I’d love for you to stick around. Feel free to connect with me on [LinkedIn](https://www.linkedin.com/in/reinis-sestakovskis) or write to me at [reinissestakovskis@gmail.com](mailto:reinissestakovskis@gmail.com). I'm open to blog topic suggestions as well, so if you have any ideas, please let me know!
+If you're interested in any of these topics, I'd love for you to stick around. Feel free to connect with me on [LinkedIn](https://www.linkedin.com/in/reinis-sestakovskis) or write to me at [reinissestakovskis@gmail.com](mailto:reinissestakovskis@gmail.com). I'm open to blog topic suggestions as well, so if you have any ideas, please let me know!
 
 Looking forward to sharing more soon. Stay tuned!
