Change date format

--- a/src/content/projects/project-2/index.mdx
+++ b/src/content/projects/project-2/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Ray Tracing Viewer"
 description: "Ray tracing project following the \"Ray Tracing in a Weekend\" book series by Peter Shirley."
-date: "03/14/2022"
+date: "2022-03-14"
 repoURL: "https://github.com/ReinisS/rt_viewer"
 ---
 
