Add tags for projects and blog posts

--- a/src/content/blog/01-how-to-become-go-to-engineer/index.mdx
+++ b/src/content/blog/01-how-to-become-go-to-engineer/index.mdx
@@ -2,6 +2,9 @@
 title: "How to Become the Go-To Engineer on Your Team"
 description: "Learn my tips on how to become a multiplier for your team, and the go-to engineer that everyone wants to work with."
 date: "2025-03-12"
+tags:
+- Software Engineering
+- Career
 ---
 
 ## Being the Go-To Engineer on Your Team
