--- a/src/content/projects/project-2/index.mdx
+++ b/src/content/projects/project-2/index.mdx
@@ -3,6 +3,10 @@ title: "Ray Tracing Viewer"
 description: "Ray tracing project following the \"Ray Tracing in a Weekend\" book series by Peter Shirley."
 date: "2022-03-14"
 repoURL: "https://github.com/ReinisS/rt_viewer"
+tags:
+- C++
+- OpenGL
+- Computer Graphics
 ---
 
 import { YouTube } from 'astro-embed';
