--- a/src/content/blog/00-hello-world/index.mdx
+++ b/src/content/blog/00-hello-world/index.mdx
@@ -2,6 +2,9 @@
 title: "Hello World!"
 description: "Welcome to my Blog!"
 date: "2025-03-03"
+tags:
+- General
+- Software Engineering
 ---
 
 import Callout from "@/components/Callout.astro";
